package Project.Classes.Maintypes;

public class Buyer extends User {
}
