package Project.Classes.Maintypes;

public class Seller extends User {
}
