package Project.Interfaces;

public interface ISellers {
    void addMovie();

    void removeMovie();

    void updateMovie();
}
