package Project.Interfaces;

public interface IUsers {
    void userMenu();

    void logout();

    void viewUser();

    void updateUser();

    void viewMovieCatalog();

    void viewTransactions();

    void viewInventory();

    void deleteUser();
}