@startuml

title First Draft

abstract class User {
    -name: String
    -lastname: String
    -email: String
    -password: String
    -phone: String
    -address: String
    -city: String
    -zip: String
    -country: String
}

class Buyer {
    -buyerID: int
    -creditCardNumber: String
    -creditCardExpiration: String
    -creditCardCVV: String
    -TRANSACTIONS: ArrayList<Transaction>
}

class Seller {
    -sellerID: int
}

interface IUsers {
    +register(): void
    +login(): void
    +logout(): void
    +viewUser(): void
    +updateUser(): void
    +viewMovie(): void
    +viewTransactions(): void
    +viewInventory(): void
    +deleteUser(): void
}

interface IBuyers {
    +addToCart(): void
    +removeFromCart(): void
    +viewCart(): void
    +checkout(): void
}

interface ISellers {
    +addMovie(): void
    +removeMovie(): void
    +updateMovie(): void
}

User <|-- Buyer
User <|-- Seller

User ...> IUsers : <<realize>>
Buyer ..> IBuyers : <<realize>>
Seller ..> ISellers : <<realize>>

@enduml